--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,9 @@ footer {
 /* ---------------------------------- */
 /* FOOTER*/
 /* ---------------------------------- */
+.brand-logo {
+  margin: 30px 0;
+}
 .brand-logo img {
   width: 35px;
 }
@@ -217,9 +220,58 @@ footer {
 }
 .social-media {
     position: relative;
-    top: 30px;
+    top: 60px;
     right: -425px;
 }
 .social-media img {
   margin-left: 10px;
+}
+.label-text {
+  color: #fff;
+  font-weight: 400;
+  font-size: 13px
+  line-height: 16px
+  letter-spacing: 10%
+}
+.form span {
+  width: 30px;
+  height: 30px;
+}
+.form-custom {
+  border-radius: 50px;
+  height: 36px;
+  padding-left: 25px;
+  padding-right: 60px;
+
+  background-image: url(../img/email-icon.svg);
+  background-repeat: no-repeat;
+  background-position: 315px 11px;
+}
+.form-line-separator {
+  display: inline-block;
+  position: relative;
+  top: 40px;
+  left: 12px;
+  width: 1px;
+  height: 24px;
+  background-color: #0C418D;
+}
+.footer-text {
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 10px;
+}
+.footer-text span {
+  font-size: 14px;
+  font-weight: 700;
+}
+.copyright-text {
+  margin-top: 40px;
+  margin-bottom: 10px;
+  color: #fff;
+  font-size: 11px;
+  letter-spacing: .5px;
+}
+.copyright-text img {
+  margin-bottom: 5px;
 }
